# Adaptive_Kiosk

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/v1/: router.py
api/v1/endpoints/: analytics.py  kiosk.py  menu.py  order.py  session.py  voice.py
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/api/v1/: router.py
backend/core/: database.py  enums.py
backend/crud/: kiosk.py  menu.py  order.py  session.py  vision.py  voice.py
backend/docs/: 백엔드 구조 설명.md  프로젝트 전체 정리.md
backend/models/: __init__.py  kiosk.py  menu.py  order.py  recommendation_event.py
backend/schemas/: analytics.py  common.py  face.py  kiosk.py  menu.py  option.py  order.py  recommendation.py  session.py  vision.py
backend/scripts/: seed_menu.py  seed_sample.py
backend/services/: analytics_service.py  face_service.py  order_service.py  recommendation_service.py  vision_service.py  voice_service.py
core/: config.py  security.py
crud/: kiosk.py  menu.py  order.py  recommendation.py  session.py
db/: db.py
docs/: 백엔드 구조 설명.md  프로그램 소개  프로젝트 전체 정리.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/hooks/: useCamera.js  useLogger.js
models/: __init__.py  menu.py  order.py  session.py  vision_event.py  voice_conversation.py
schemas/: analytics.py  kiosk.py  menu.py  order.py  session.py  voice.py
scripts/: seed_menu.py
services/: analytics_service.py  recommendation_service.py  vision_service.py
(+20 files in other folders)
